src/mlx.h

typedef int (*mlx_loop_callback)(void *);
typedef int (*mlx_hook_callback)(void *);
int	mlx_loop_hook(void *mlx_ptr, mlx_loop_callback funct_ptr, void *param);
/*
**  Functions return 0 on success.
**  Key event is triggered on KeyRelease, not KeyPressed.
**  Mouse event is triggered on clic.
**
**  hook functions are called as follow:
**    expose_hook(void *param);
**    key_hook(unsigned int keycode, void *param);
**    mouse_hook(unsigned int button, unsigned int x, unsigned int y,
**               void *param);
**    loop_hook(void *param);
*/

/*
**  Generic hook system for all events, and minilibX functions that
**    can be hooked. Some macro and defines from X11/X.h are needed here.
**  Warning: you may need to cast your function pointer for key and mouse events
**   as there will be extra parameters.
*/
int	mlx_hook(void *win_ptr, unsigned int x_event, unsigned int x_mask,
                 mlx_hook_callback funct_ptr, void *param);
/*
**  Convenience functions
**  mlx_string_put() display may vary in size between OS and between
**    mlx implementations
**  mlx_string_put() returns 0 on success.
**  Other functions return an image (like mlx_new_image()) or 'void *0'.
**
*/
int	mlx_string_put(void *mlx_ptr, void *win_ptr,
		       unsigned int x, unsigned int y,
		       unsigned int color, char *string);
void	*mlx_xpm_to_image(void *mlx_ptr, const char **xpm_data,
			  unsigned int *width, unsigned int *height);
void	*mlx_xpm_file_to_image(void *mlx_ptr, const char *filename,
			       unsigned int *width, unsigned int *height);
void    *mlx_png_file_to_image(void *mlx_ptr, const char *filename,
			       unsigned int *width, unsigned int *height);
/*
** Convenience functions
** All functions return 0 on success.
*/
int     mlx_mouse_hide(void *mlx_ptr);
int     mlx_mouse_show(void *mlx_ptr);
int     mlx_mouse_move(void *win_ptr, int x, int y);
int     mlx_mouse_get_pos(void *win_ptr, int *x, int *y);
int	mlx_do_key_autorepeatoff(void *mlx_ptr);
int	mlx_do_key_autorepeaton(void *mlx_ptr);
int	mlx_get_screen_size(void *mlx_ptr,
			    unsigned int *width, unsigned int *height);
/*
** Flush & Sync
*/
int	mlx_do_sync(void *mlx_ptr);
int	mlx_sync(void *mlx_ptr, int cmd, void *param);